--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "alpinejs": "^3.12.0",
+    "flamethrower-router": "^0.0.0-meme.12",
     "vite-plugin-live-reload": "^3.0.2"
   }
 }
